# Legal-Clause-Classification-using-Particle-Swarm-Optimization

./: README.md  main.py  progress_check.txt  project_explanation.md  pyproject.toml  requirements.txt
data/: class_weights.json  dataset_README.txt
data_processing/: data_explore.ipynb
model/: best_params.json  logistic_regression_pso.pkl  tfidf_vectorizer.pkl
model_training/: class_weights.json  final_model_with_pso.ipynb  logistic_regression.ipynb
